{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 5374,
  "lineage": "03cac002-5114-6176-9523-372894b8ccdd",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-027ca2cf5086b2c5c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-027ca2cf5086b2c5c",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06acde3298d56519b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-06acde3298d56519b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e534081ff229236e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06acde3298d56519b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8258492d8d1c7db",
            "owner_id": "390403894296"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-0f37332f97563a5a1",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0f37332f97563a5a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "service_one",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-0face683b3f6b232f",
            "description": "Allow access from service one",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0face683b3f6b232f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "service_two",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service two",
            "from_port": 80,
            "id": "sgrule-2541369720",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f37332f97563a5a1",
            "security_group_rule_id": "sgr-0d73f6ff85264b532",
            "self": false,
            "source_security_group_id": "sg-0face683b3f6b232f",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.service_one",
            "module.security_group.aws_security_group.service_two",
            "module.security_group.module.rules_one.aws_security_group.this",
            "module.security_group.module.rules_one.aws_security_group.this_name_prefix",
            "module.vpcA.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service one",
            "from_port": 80,
            "id": "sgrule-1495363175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0face683b3f6b232f",
            "security_group_rule_id": "sgr-0b06af6279dcc4043",
            "self": false,
            "source_security_group_id": "sg-0f37332f97563a5a1",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.service_one",
            "module.security_group.aws_security_group.service_two",
            "module.security_group.module.rules_two.aws_security_group.this",
            "module.security_group.module.rules_two.aws_security_group.this_name_prefix",
            "module.vpcA.module.vpcA.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_on_prem",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-027ca2cf5086b2c5c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-027ca2cf5086b2c5c",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06acde3298d56519b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group_on_prem",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-06acde3298d56519b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e534081ff229236e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06acde3298d56519b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8258492d8d1c7db",
            "owner_id": "390403894296"
          }
        }
      ]
    },
    {
      "module": "module.security_group_on_prem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-0e08256a2505b6202",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0e08256a2505b6202",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "service_one",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_on_prem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-0e881ffd124b03546",
            "description": "Allow access from service one",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0e881ffd124b03546",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "service_two",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_on_prem.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_on_prem.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_on_prem.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service two",
            "from_port": 80,
            "id": "sgrule-3976286580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08256a2505b6202",
            "security_group_rule_id": "sgr-02e4c206c3117be91",
            "self": false,
            "source_security_group_id": "sg-0e881ffd124b03546",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_on_prem.aws_security_group.service_one",
            "module.security_group_on_prem.aws_security_group.service_two",
            "module.security_group_on_prem.module.rules_one.aws_security_group.this",
            "module.security_group_on_prem.module.rules_one.aws_security_group.this_name_prefix",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_on_prem.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_on_prem.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_on_prem.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service one",
            "from_port": 80,
            "id": "sgrule-74209207",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e881ffd124b03546",
            "security_group_rule_id": "sgr-077ed60aba74d7acb",
            "self": false,
            "source_security_group_id": "sg-0e08256a2505b6202",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_on_prem.aws_security_group.service_one",
            "module.security_group_on_prem.aws_security_group.service_two",
            "module.security_group_on_prem.module.rules_two.aws_security_group.this",
            "module.security_group_on_prem.module.rules_two.aws_security_group.this_name_prefix",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcB",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-027ca2cf5086b2c5c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-027ca2cf5086b2c5c",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06acde3298d56519b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group_vpcB",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-06acde3298d56519b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e534081ff229236e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06acde3298d56519b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8258492d8d1c7db",
            "owner_id": "390403894296"
          }
        }
      ]
    },
    {
      "module": "module.security_group_vpcB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-079b7b82d3de160c5",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-079b7b82d3de160c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "service_one",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcB.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-0d875c95c9e9e71f0",
            "description": "Allow access from service one",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-0d875c95c9e9e71f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "service_two",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcB.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcB.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_vpcB.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_vpcB.module.rules_one",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service two",
            "from_port": 80,
            "id": "sgrule-3689135560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079b7b82d3de160c5",
            "security_group_rule_id": "sgr-04281b861881262b3",
            "self": false,
            "source_security_group_id": "sg-0d875c95c9e9e71f0",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_vpcB.aws_security_group.service_one",
            "module.security_group_vpcB.aws_security_group.service_two",
            "module.security_group_vpcB.module.rules_one.aws_security_group.this",
            "module.security_group_vpcB.module.rules_one.aws_security_group.this_name_prefix",
            "module.vpcB.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcB.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_vpcB.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_vpcB.module.rules_two",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group_vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service one",
            "from_port": 80,
            "id": "sgrule-1113271316",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d875c95c9e9e71f0",
            "security_group_rule_id": "sgr-045f140de77e87aad",
            "self": false,
            "source_security_group_id": "sg-079b7b82d3de160c5",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_vpcB.aws_security_group.service_one",
            "module.security_group_vpcB.aws_security_group.service_two",
            "module.security_group_vpcB.module.rules_two.aws_security_group.this",
            "module.security_group_vpcB.module.rules_two.aws_security_group.this_name_prefix",
            "module.vpcB.module.vpcB.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcC",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-027ca2cf5086b2c5c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-027ca2cf5086b2c5c",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06acde3298d56519b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group_vpcC",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-06acde3298d56519b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e534081ff229236e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06acde3298d56519b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8258492d8d1c7db",
            "owner_id": "390403894296"
          }
        }
      ]
    },
    {
      "module": "module.security_group_vpcC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one_vpcC",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-06f1a5171f9ca121a",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f1a5171f9ca121a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "service_one_vpcC",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcC.module.vpcC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two_vpcC",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:security-group/sg-0c8a6f21ab1b7bd6e",
            "description": "Allow access from service two",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8a6f21ab1b7bd6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "service_two_vpcC",
            "name_prefix": "",
            "owner_id": "390403894296",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcC.module.vpcC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_vpcC.module.security_group_vpcC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_vpcC.module.security_group_vpcC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group_vpcC.module.security_group_vpcC",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "module.security_group_vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "http from service two",
            "from_port": 80,
            "id": "sgrule-3531079766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06f1a5171f9ca121a",
            "security_group_rule_id": "sgr-07c8a3b194289ccd5",
            "self": false,
            "source_security_group_id": "sg-0c8a6f21ab1b7bd6e",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_vpcC.aws_security_group.service_one_vpcC",
            "module.security_group_vpcC.aws_security_group.service_two_vpcC",
            "module.security_group_vpcC.module.security_group_vpcC.aws_security_group.this",
            "module.security_group_vpcC.module.security_group_vpcC.aws_security_group.this_name_prefix",
            "module.vpcC.module.vpcC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:390403894296:transit-gateway/tgw-087a1112b9f9eaffa",
            "association_default_route_table_id": "tgw-rtb-04ec82b778f98f6db",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "My TGW shared with several other AWS accounts",
            "dns_support": "enable",
            "id": "tgw-087a1112b9f9eaffa",
            "multicast_support": "disable",
            "owner_id": "390403894296",
            "propagation_default_route_table_id": "tgw-rtb-04ec82b778f98f6db",
            "security_group_referencing_support": "enable",
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "timeouts": {
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.1.0.0/16",
            "id": "tgw-rtb-0ada99bfe2a04b220_10.1.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0b3da3037baf29250",
            "transit_gateway_route_table_id": "tgw-rtb-0ada99bfe2a04b220"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.0.0/16",
            "id": "tgw-rtb-0ada99bfe2a04b220_10.0.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-02b6cc61a7015f2cf",
            "transit_gateway_route_table_id": "tgw-rtb-0ada99bfe2a04b220"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "172.16.0.0/16",
            "id": "tgw-rtb-0ada99bfe2a04b220_172.16.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-02b6cc61a7015f2cf",
            "transit_gateway_route_table_id": "tgw-rtb-0ada99bfe2a04b220"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:transit-gateway-route-table/tgw-rtb-0ada99bfe2a04b220",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0ada99bfe2a04b220",
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway"
            },
            "transit_gateway_id": "tgw-087a1112b9f9eaffa"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway.module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpcA",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b3da3037baf29250",
            "ipv6_support": "disable",
            "security_group_referencing_support": "disable",
            "subnet_ids": [
              "subnet-02939e37cff0ca8f5",
              "subnet-0b2c44a7306a6b1ea"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcA"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcA"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_id": "vpc-0f72531ef58ea6762",
            "vpc_owner_id": "390403894296"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "vpcB",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-02b6cc61a7015f2cf",
            "ipv6_support": "disable",
            "security_group_referencing_support": "disable",
            "subnet_ids": [
              "subnet-02d00992effd21bea",
              "subnet-0642a62a53f16302f"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcB"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpcB"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_id": "vpc-03b8b925e66483748",
            "vpc_owner_id": "390403894296"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "vpc_on_prem",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b5a906f5aed59e6a",
            "ipv6_support": "disable",
            "security_group_referencing_support": "disable",
            "subnet_ids": [
              "subnet-0084705c197cd6d80",
              "subnet-05cf6547e9d5c829f"
            ],
            "tags": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpc-on-prem"
            },
            "tags_all": {
              "GithubOrg": "terraform-aws-transit-gateway",
              "GithubRepo": "terraform-aws-eks",
              "Name": "transit-gateway-vpc-on-prem"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_id": "vpc-0438105bc3460980d",
            "vpc_owner_id": "390403894296"
          },
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcAPub_to_vpcB",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f01bc06d35975def3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f01bc06d35975def",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcAPub_to_vpcC",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f01bc06d35975def1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f01bc06d35975def",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e33d74ad25dae5da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.foo"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcA_to_vpcB",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04053c08ac89afc463322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04053c08ac89afc46",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcA_to_vpcC",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04053c08ac89afc461218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04053c08ac89afc46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e33d74ad25dae5da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.foo"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9f5e49bd765f028",
            "arn": "arn:aws:ec2:us-east-1:390403894296:elastic-ip/eipalloc-0d9f5e49bd765f028",
            "domain": "vpc",
            "id": "eipalloc-0d9f5e49bd765f028",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-20-135-207.compute-1.amazonaws.com",
            "public_ip": "107.20.135.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC A-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC A-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_internet_gateway.this",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:internet-gateway/igw-0d3984bb1e91b9c58",
            "id": "igw-0d3984bb1e91b9c58",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "Name": "VPC A"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9f5e49bd765f028",
            "association_id": "eipassoc-01bd86e0a2f23c834",
            "connectivity_type": "public",
            "id": "nat-0573556c6b6cda03b",
            "network_interface_id": "eni-037872092aed65758",
            "private_ip": "10.0.4.90",
            "public_ip": "107.20.135.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0723d113c1aa6f747",
            "tags": {
              "Name": "VPC A-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC A-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_eip.nat",
            "module.vpcA.module.vpcA.aws_internet_gateway.this",
            "module.vpcA.module.vpcA.aws_subnet.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04053c08ac89afc461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0573556c6b6cda03b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04053c08ac89afc46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_eip.nat",
            "module.vpcA.module.vpcA.aws_internet_gateway.this",
            "module.vpcA.module.vpcA.aws_nat_gateway.this",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_subnet.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d3984bb1e91b9c58",
            "id": "r-rtb-0f01bc06d35975def1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f01bc06d35975def",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_internet_gateway.this",
            "module.vpcA.module.vpcA.aws_route_table.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-04053c08ac89afc46",
            "id": "rtb-04053c08ac89afc46",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC A-private"
            },
            "tags_all": {
              "Name": "VPC A-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-0f01bc06d35975def",
            "id": "rtb-0f01bc06d35975def",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC A-public"
            },
            "tags_all": {
              "Name": "VPC A-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0370f7fd95e6521ef",
            "route_table_id": "rtb-04053c08ac89afc46",
            "subnet_id": "subnet-0d1b838b54217a098"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.database",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_subnet.database",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0158ef944646c8507",
            "route_table_id": "rtb-04053c08ac89afc46",
            "subnet_id": "subnet-0f5f3c60d5c29d4b8"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.database",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_subnet.database",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0082f58b440b0e55a",
            "route_table_id": "rtb-04053c08ac89afc46",
            "subnet_id": "subnet-0b2c44a7306a6b1ea"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03735bb654b312610",
            "route_table_id": "rtb-04053c08ac89afc46",
            "subnet_id": "subnet-02939e37cff0ca8f5"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.private",
            "module.vpcA.module.vpcA.aws_subnet.private",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030d4badbc28fd48",
            "route_table_id": "rtb-0f01bc06d35975def",
            "subnet_id": "subnet-0723d113c1aa6f747"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.public",
            "module.vpcA.module.vpcA.aws_subnet.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea2a04603e969178",
            "route_table_id": "rtb-0f01bc06d35975def",
            "subnet_id": "subnet-0138a71319ac4e041"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_route_table.public",
            "module.vpcA.module.vpcA.aws_subnet.public",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0d1b838b54217a098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b838b54217a098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet One"
            },
            "tags_all": {
              "Name": "DB Subnet One"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0f5f3c60d5c29d4b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5f3c60d5c29d4b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-db-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC A-db-us-east-1b"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0b2c44a7306a6b1ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2c44a7306a6b1ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet One"
            },
            "tags_all": {
              "Name": "Private Subnet One"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-02939e37cff0ca8f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02939e37cff0ca8f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet Two"
            },
            "tags_all": {
              "Name": "Private Subnet Two"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0723d113c1aa6f747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0723d113c1aa6f747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-public-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC A-public-us-east-1a"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0138a71319ac4e041",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0138a71319ac4e041",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-public-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC A-public-us-east-1b"
            },
            "vpc_id": "vpc-0f72531ef58ea6762"
          },
          "dependencies": [
            "module.vpcA.data.aws_availability_zones.available",
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcA.module.vpcA.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcA.module.vpcA",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpcA.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-0f72531ef58ea6762",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef22497d131d461e",
            "default_route_table_id": "rtb-04b983d50f9d2b723",
            "default_security_group_id": "sg-081fc8cf8d473ba1d",
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f72531ef58ea6762",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b983d50f9d2b723",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "Name": "VPC A"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcBPub_to_on_prem",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032f8d754625a8ea33246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032f8d754625a8ea3",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcBPub_to_vpcA",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032f8d754625a8ea3179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032f8d754625a8ea3",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcB_to_vpcA",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e4532c0cfaf7398179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcB_to_vpc_on_prem",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e4532c0cfaf73983246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms_interface",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc-endpoint/vpce-0c0f79a9bfaf696ea",
            "dns_entry": [
              {
                "dns_name": "vpce-0c0f79a9bfaf696ea-n2pp1s20.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c0f79a9bfaf696ea-n2pp1s20-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c0f79a9bfaf696ea-n2pp1s20-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07376271ZGVWSX6BF6ND"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c0f79a9bfaf696ea",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04f67f3d4e91231ff",
              "eni-0d6b27f791d608fc9"
            ],
            "owner_id": "390403894296",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-079b7b82d3de160c5"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.0.75",
                "subnet_id": "subnet-02d00992effd21bea"
              },
              {
                "ipv4": "10.1.1.33",
                "subnet_id": "subnet-0642a62a53f16302f"
              }
            ],
            "subnet_ids": [
              "subnet-02d00992effd21bea",
              "subnet-0642a62a53f16302f"
            ],
            "tags": {
              "Environment": "test",
              "Name": "kms-interface-vpc-endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "kms-interface-vpc-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.security_group_vpcB.aws_security_group.service_one",
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc-endpoint/vpce-0660db9553a639cc7",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0660db9553a639cc7",
            "owner_id": "390403894296",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09e4532c0cfaf7398"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "s3-gateway-vpc-endpoint"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "s3-gateway-vpc-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_interface",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e1dc7a00c25b8dc",
            "arn": "arn:aws:ec2:us-east-1:390403894296:elastic-ip/eipalloc-04e1dc7a00c25b8dc",
            "domain": "vpc",
            "id": "eipalloc-04e1dc7a00c25b8dc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-214-155-227.compute-1.amazonaws.com",
            "public_ip": "3.214.155.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC B-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC B-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_internet_gateway.this",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:internet-gateway/igw-0a0f7b3e9d4f4d0e3",
            "id": "igw-0a0f7b3e9d4f4d0e3",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC B"
            },
            "tags_all": {
              "Name": "VPC B"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e1dc7a00c25b8dc",
            "association_id": "eipassoc-0dbb30a6f12a3c7e4",
            "connectivity_type": "public",
            "id": "nat-0db21026d1fe4ba19",
            "network_interface_id": "eni-06f12164be42e051d",
            "private_ip": "10.1.4.230",
            "public_ip": "3.214.155.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096e5b90775882f56",
            "tags": {
              "Name": "VPC B-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC B-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_eip.nat",
            "module.vpcB.module.vpcB.aws_internet_gateway.this",
            "module.vpcB.module.vpcB.aws_subnet.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e4532c0cfaf73981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0db21026d1fe4ba19",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_eip.nat",
            "module.vpcB.module.vpcB.aws_internet_gateway.this",
            "module.vpcB.module.vpcB.aws_nat_gateway.this",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_subnet.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a0f7b3e9d4f4d0e3",
            "id": "r-rtb-032f8d754625a8ea31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032f8d754625a8ea3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_internet_gateway.this",
            "module.vpcB.module.vpcB.aws_route_table.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-09e4532c0cfaf7398",
            "id": "rtb-09e4532c0cfaf7398",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC B-private"
            },
            "tags_all": {
              "Name": "VPC B-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-032f8d754625a8ea3",
            "id": "rtb-032f8d754625a8ea3",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC B-public"
            },
            "tags_all": {
              "Name": "VPC B-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7abf22638dce8c1",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "subnet_id": "subnet-09ee9331ac4e9029d"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.database",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_subnet.database",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0991dd166bed624f3",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "subnet_id": "subnet-075ae819312b9e793"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.database",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_subnet.database",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86887c2d64a043c",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "subnet_id": "subnet-02d00992effd21bea"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd0d914069c8c278",
            "route_table_id": "rtb-09e4532c0cfaf7398",
            "subnet_id": "subnet-0642a62a53f16302f"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.private",
            "module.vpcB.module.vpcB.aws_subnet.private",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04df126708c885446",
            "route_table_id": "rtb-032f8d754625a8ea3",
            "subnet_id": "subnet-096e5b90775882f56"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.public",
            "module.vpcB.module.vpcB.aws_subnet.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc1fab8e207865ef",
            "route_table_id": "rtb-032f8d754625a8ea3",
            "subnet_id": "subnet-062c1dde79d6c8c0a"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_route_table.public",
            "module.vpcB.module.vpcB.aws_subnet.public",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-09ee9331ac4e9029d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee9331ac4e9029d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet One"
            },
            "tags_all": {
              "Name": "DB Subnet One"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-075ae819312b9e793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075ae819312b9e793",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC B-db-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC B-db-us-east-1b"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-02d00992effd21bea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d00992effd21bea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet One"
            },
            "tags_all": {
              "Name": "Private Subnet One"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0642a62a53f16302f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0642a62a53f16302f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet Two"
            },
            "tags_all": {
              "Name": "Private Subnet Two"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-096e5b90775882f56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096e5b90775882f56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC B-public-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC B-public-us-east-1a"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-062c1dde79d6c8c0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062c1dde79d6c8c0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC B-public-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC B-public-us-east-1b"
            },
            "vpc_id": "vpc-03b8b925e66483748"
          },
          "dependencies": [
            "module.vpcB.data.aws_availability_zones.available",
            "module.vpcB.module.vpcB.aws_vpc.this",
            "module.vpcB.module.vpcB.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcB.module.vpcB",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpcB.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-03b8b925e66483748",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c6b3585bc12d9467",
            "default_route_table_id": "rtb-0716dd3911688a548",
            "default_security_group_id": "sg-00bcaa3faab857472",
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b8b925e66483748",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0716dd3911688a548",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC B"
            },
            "tags_all": {
              "Name": "VPC B"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpcC",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcC_public_to_vpcA",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b31b9fe04f01c981179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b31b9fe04f01c981",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e33d74ad25dae5da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.public",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_peering.aws_vpc_peering_connection.foo"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcC_to_vpcA",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-097252e552a2bb26f179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-097252e552a2bb26f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e33d74ad25dae5da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.private",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_peering.aws_vpc_peering_connection.foo"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecfb25c4ecc8f64c",
            "arn": "arn:aws:ec2:us-east-1:390403894296:elastic-ip/eipalloc-0ecfb25c4ecc8f64c",
            "domain": "vpc",
            "id": "eipalloc-0ecfb25c4ecc8f64c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-10-167.compute-1.amazonaws.com",
            "public_ip": "3.224.10.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC C-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC C-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_internet_gateway.this",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:internet-gateway/igw-07a2a8c249a951757",
            "id": "igw-07a2a8c249a951757",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC C"
            },
            "tags_all": {
              "Name": "VPC C"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecfb25c4ecc8f64c",
            "association_id": "eipassoc-07ae356257072e99f",
            "connectivity_type": "public",
            "id": "nat-0055657b18fb06652",
            "network_interface_id": "eni-0ca6a39b70354bc44",
            "private_ip": "10.2.4.158",
            "public_ip": "3.224.10.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04ee073ea2a2440f5",
            "tags": {
              "Name": "VPC C-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC C-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_eip.nat",
            "module.vpcC.module.vpcC.aws_internet_gateway.this",
            "module.vpcC.module.vpcC.aws_subnet.public",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-097252e552a2bb26f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0055657b18fb06652",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-097252e552a2bb26f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_eip.nat",
            "module.vpcC.module.vpcC.aws_internet_gateway.this",
            "module.vpcC.module.vpcC.aws_nat_gateway.this",
            "module.vpcC.module.vpcC.aws_route_table.private",
            "module.vpcC.module.vpcC.aws_subnet.public",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07a2a8c249a951757",
            "id": "r-rtb-0b31b9fe04f01c9811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b31b9fe04f01c981",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_internet_gateway.this",
            "module.vpcC.module.vpcC.aws_route_table.public",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-097252e552a2bb26f",
            "id": "rtb-097252e552a2bb26f",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC C-private"
            },
            "tags_all": {
              "Name": "VPC C-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-0b31b9fe04f01c981",
            "id": "rtb-0b31b9fe04f01c981",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC C-public"
            },
            "tags_all": {
              "Name": "VPC C-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f34c57e2b7356cd",
            "route_table_id": "rtb-097252e552a2bb26f",
            "subnet_id": "subnet-029ec1bb8f8522440"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.database",
            "module.vpcC.module.vpcC.aws_route_table.private",
            "module.vpcC.module.vpcC.aws_subnet.database",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066374d23e40fa19d",
            "route_table_id": "rtb-097252e552a2bb26f",
            "subnet_id": "subnet-0ffdc85849f69e846"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.database",
            "module.vpcC.module.vpcC.aws_route_table.private",
            "module.vpcC.module.vpcC.aws_subnet.database",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6294be28177b15d",
            "route_table_id": "rtb-097252e552a2bb26f",
            "subnet_id": "subnet-0ead96d715c3add97"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.private",
            "module.vpcC.module.vpcC.aws_subnet.private",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d0474d91eef5679",
            "route_table_id": "rtb-097252e552a2bb26f",
            "subnet_id": "subnet-0ff3b32727138df60"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.private",
            "module.vpcC.module.vpcC.aws_subnet.private",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4c6ee2bb8ef4c8d",
            "route_table_id": "rtb-0b31b9fe04f01c981",
            "subnet_id": "subnet-04ee073ea2a2440f5"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.public",
            "module.vpcC.module.vpcC.aws_subnet.public",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba8e016d037054f",
            "route_table_id": "rtb-0b31b9fe04f01c981",
            "subnet_id": "subnet-08a1ce285dce1a145"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_route_table.public",
            "module.vpcC.module.vpcC.aws_subnet.public",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-029ec1bb8f8522440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029ec1bb8f8522440",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet One"
            },
            "tags_all": {
              "Name": "DB Subnet One"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0ffdc85849f69e846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffdc85849f69e846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC C-db-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC C-db-us-east-1b"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0ead96d715c3add97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ead96d715c3add97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet One"
            },
            "tags_all": {
              "Name": "Private Subnet One"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0ff3b32727138df60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff3b32727138df60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet Two"
            },
            "tags_all": {
              "Name": "Private Subnet Two"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-04ee073ea2a2440f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee073ea2a2440f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC C-public-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC C-public-us-east-1a"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-08a1ce285dce1a145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a1ce285dce1a145",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC C-public-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC C-public-us-east-1b"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcC.data.aws_availability_zones.available",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcC.module.vpcC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpcC.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-018653938ee5b01af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-091b8c0e00e8ce881",
            "default_route_table_id": "rtb-01c5f94aa57eb1bea",
            "default_security_group_id": "sg-0dd6f778c9b79f922",
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018653938ee5b01af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c5f94aa57eb1bea",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC C"
            },
            "tags_all": {
              "Name": "VPC C"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_prem_pub_to_vpcB",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b513de394200f073322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b513de394200f07",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_prem_to_vpcB",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb83982d62445a323322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb83982d62445a32",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-087a1112b9f9eaffa",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit_gateway.module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6cbb245301fcef1",
            "arn": "arn:aws:ec2:us-east-1:390403894296:elastic-ip/eipalloc-0a6cbb245301fcef1",
            "domain": "vpc",
            "id": "eipalloc-0a6cbb245301fcef1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-22-210-100.compute-1.amazonaws.com",
            "public_ip": "52.22.210.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC On Prem-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC On Prem-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_internet_gateway.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:internet-gateway/igw-0a311e0b06778b979",
            "id": "igw-0a311e0b06778b979",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC On Prem"
            },
            "tags_all": {
              "Name": "VPC On Prem"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6cbb245301fcef1",
            "association_id": "eipassoc-0d58e7b7658927190",
            "connectivity_type": "public",
            "id": "nat-07614676f234f06a3",
            "network_interface_id": "eni-0e78b1cbf55fd9c4e",
            "private_ip": "172.16.4.154",
            "public_ip": "52.22.210.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b562e8a69e39229f",
            "tags": {
              "Name": "VPC On Prem-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC On Prem-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_eip.nat",
            "module.vpc_on_prem.module.vpc_on_prem.aws_internet_gateway.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb83982d62445a321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07614676f234f06a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb83982d62445a32",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_eip.nat",
            "module.vpc_on_prem.module.vpc_on_prem.aws_internet_gateway.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_nat_gateway.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a311e0b06778b979",
            "id": "r-rtb-08b513de394200f071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b513de394200f07",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_internet_gateway.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-0eb83982d62445a32",
            "id": "rtb-0eb83982d62445a32",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC On Prem-private"
            },
            "tags_all": {
              "Name": "VPC On Prem-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:route-table/rtb-08b513de394200f07",
            "id": "rtb-08b513de394200f07",
            "owner_id": "390403894296",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC On Prem-public"
            },
            "tags_all": {
              "Name": "VPC On Prem-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bdfeeb67e80311f",
            "route_table_id": "rtb-0eb83982d62445a32",
            "subnet_id": "subnet-0b41cdda9d985992d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.database",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.database",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0021e7ea5169f0e48",
            "route_table_id": "rtb-0eb83982d62445a32",
            "subnet_id": "subnet-054cc617faf9d809f"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.database",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.database",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ff27903b11c8607",
            "route_table_id": "rtb-0eb83982d62445a32",
            "subnet_id": "subnet-05cf6547e9d5c829f"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ee27d31d97ead46",
            "route_table_id": "rtb-0eb83982d62445a32",
            "subnet_id": "subnet-0084705c197cd6d80"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.private",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07408845de9c8b6d6",
            "route_table_id": "rtb-08b513de394200f07",
            "subnet_id": "subnet-0b562e8a69e39229f"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5a5a3e8948c821",
            "route_table_id": "rtb-08b513de394200f07",
            "subnet_id": "subnet-0e5edf9a061540945"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_route_table.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_subnet.public",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0b41cdda9d985992d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b41cdda9d985992d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB Subnet One"
            },
            "tags_all": {
              "Name": "DB Subnet One"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-054cc617faf9d809f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054cc617faf9d809f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC On Prem-db-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC On Prem-db-us-east-1b"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-05cf6547e9d5c829f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf6547e9d5c829f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet One"
            },
            "tags_all": {
              "Name": "Private Subnet One"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0084705c197cd6d80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084705c197cd6d80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet Two"
            },
            "tags_all": {
              "Name": "Private Subnet Two"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0b562e8a69e39229f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b562e8a69e39229f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC On Prem-public-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC On Prem-public-us-east-1a"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:subnet/subnet-0e5edf9a061540945",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5edf9a061540945",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403894296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC On Prem-public-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC On Prem-public-us-east-1b"
            },
            "vpc_id": "vpc-0438105bc3460980d"
          },
          "dependencies": [
            "module.vpc_on_prem.data.aws_availability_zones.available",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc.this",
            "module.vpc_on_prem.module.vpc_on_prem.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_on_prem.module.vpc_on_prem",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc_on_prem.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390403894296:vpc/vpc-0438105bc3460980d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-02633a9d4f3a37757",
            "default_route_table_id": "rtb-0364bde2b644f66b6",
            "default_security_group_id": "sg-0ad8e40907fdfdefe",
            "dhcp_options_id": "dopt-097306bf19c3cb2c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0438105bc3460980d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0364bde2b644f66b6",
            "owner_id": "390403894296",
            "tags": {
              "Name": "VPC On Prem"
            },
            "tags_all": {
              "Name": "VPC On Prem"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0e33d74ad25dae5da",
            "peer_owner_id": "390403894296",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0f72531ef58ea6762",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between vpcA and vpcC"
            },
            "tags_all": {
              "Name": "VPC Peering between vpcA and vpcC"
            },
            "vpc_id": "vpc-018653938ee5b01af"
          },
          "dependencies": [
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e33d74ad25dae5da",
            "peer_owner_id": "390403894296",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0f72531ef58ea6762",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering Accepter for vpcA and vpcC"
            },
            "tags_all": {
              "Name": "VPC Peering Accepter for vpcA and vpcC"
            },
            "vpc_id": "vpc-018653938ee5b01af",
            "vpc_peering_connection_id": "pcx-0e33d74ad25dae5da"
          },
          "dependencies": [
            "module.vpcA.module.vpcA.aws_vpc.this",
            "module.vpcC.module.vpcC.aws_vpc.this",
            "module.vpc_peering.aws_vpc_peering_connection.foo"
          ]
        }
      ]
    }
  ]
}